@@ -158,7 +158,7 @@ class unit
 		void redraw_unit(display& disp,gamemap::location hex);
 
 		void set_standing(const display& disp,const gamemap::location& loc, bool with_bars = true);
-		void set_defending(const display &disp,const gamemap::location& loc, int damage,const attack_type* attack);
+		void set_defending(const display &disp,const gamemap::location& loc, int damage,const attack_type* attack,int swing_num);
 		void set_leading(const display& disp,const gamemap::location& loc);
 		void set_healing(const display& disp,const gamemap::location& loc);
 		void set_leveling_in(const display& disp,const gamemap::location& loc);
@@ -167,7 +167,7 @@ class unit
 		void set_extra_anim(const display& disp,const gamemap::location& loc, std::string flag);
 		void set_dying(const display &disp,const gamemap::location& loc,const attack_type* attack);
 		void set_walking(const display& disp,const gamemap::location& loc);
-		const unit_animation & set_attacking(const display& disp,const gamemap::location& loc,bool hit,const attack_type& type);
+		const unit_animation & set_attacking( const display &disp,const gamemap::location& loc,int damage,const attack_type& type,int swing_num);
 		void set_recruited(const display& disp,const gamemap::location& loc);
 		void set_healed(const display& disp,const gamemap::location& loc,int healing);
 		void set_poisoned(const display& disp,const gamemap::location& loc,int damage);
@@ -237,7 +237,7 @@ class unit
 		const std::string& race() const;
 
 		const defensive_animation& defend_animation(const std::string &terrain,
-				fighting_animation::hit_type hits,const attack_type* attack) const;
+				fighting_animation::hit_type hits,const attack_type* attack,int swing_num) const;
 		const unit_animation& teleport_animation() const;
 		const unit_animation* extra_animation(const std::string &terrain,const std::string &flag) const;
 		const death_animation& die_animation(const std::string &terrain,
