@@ -39,7 +39,7 @@ void unit_die(display& disp, const gamemap::location& loc, unit& u, const attack
 ///playing field.
 bool unit_attack(display& disp, unit_map& units,
                  const gamemap::location& a, const gamemap::location& b, int damage,
-                 const attack_type& attack, bool update_display);
+                 const attack_type& attack, bool update_display, int swing);
 
 }
 
