@@ -21,6 +21,7 @@ Version 1.3-svn:
    * new remove_specials=<id_list> key to allow to remove specials in effect tags
    * obsolete set_special= in [effect] tags
    * correct handling of UTF8 filenames under windows
+   * fighting animations can now be filtered on swing number
  * multiplayer game management
    * client now tells the server if it ended in vectory or defeat 
 
